added comments that I want to revert away from

--- a/test.html
+++ b/test.html
@@ -12,5 +12,15 @@
 
 
     this is a change that I want to revert to using a pull
+
+
+    <!--
+
+        i want to revert out of this
+
+    -->
+
+
+
 </body>
 </html>
